tools/spike-runner/tests/compile_fail/sp_nt1_cyclic_negation.stderr
error: use of aggregated relation `advancing` cannot be stratified
  --> tests/compile_fail/sp_nt1_cyclic_negation.rs:25:31
   |
25 |     blocked(h) <-- active(h), !advancing(h);
   |                               ^

warning: unused imports: `HandleId` and `Status`
  --> tests/compile_fail/sp_nt1_cyclic_negation.rs:13:27
   |
13 | use spike_runner::types::{HandleId, Status};
   |                           ^^^^^^^^  ^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
